--- a/web/css/documentation_index.css
+++ b/web/css/documentation_index.css
@@ -1,11 +1,21 @@
 #documentation ul li {
   background: #f5f5f5;
   border-bottom: 1px solid #ccc;
-  padding: 16px;
-  margin-right: 30px;
+  padding: 20px;
+  padding-right: 200px;
   margin-left: 0;
   list-style-type: none;
   position: relative;
+}
+
+#documentation ul li a.cover_image {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#documentation ul li a.cover_image img {
+  height: 175px;
 }
 
 #documentation ul li p {
