--- a/web/css/project.css
+++ b/web/css/project.css
@@ -1,17 +1,38 @@
-#project_content {
-  margin-left: 80px;
+.project {
+  margin-left: 30px;
+  margin-right: 30px;
+  background-color: #F5F5F5;
 }
 
-#project_content ul li {
-  background: #f5f5f5;
+#project_content {
+  margin-left: 100px;
+}
+
+#project_content #top {
+  background: #F5F5F5;
   border-bottom: 1px solid #ccc;
-  padding: 10px;
-  margin-right: 30px;
-  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#project_content ul li ul {
+  margin-left: 0;
+  margin: 0;
+  padding: 0;
 }
 
 #project_content ul li ul li {
-  background: #fff;
+  border-bottom: 1px solid #ccc;
+  background-color: #fff;
+  padding: 10px;
+  margin-right: 20px;
+  margin-left: 0;
+  font-weight: bold;
+}
+
+#project_content #versions {
+  height: 275px;
+  margin-top: 20px;
 }
 
 #project_content .version {
@@ -49,5 +70,5 @@
 }
 
 #mongodb_odm {
-  background: #f5f5f5 url('../images/mongodb_odm_icon.png') 30px 20px no-repeat;
+  background: url('../images/mongodb_odm_icon.png') 30px 20px no-repeat;
 }
