--- a/web/css/contributors.css
+++ b/web/css/contributors.css
@@ -20,8 +20,8 @@
   margin-left: 30px;
   margin-bottom: 15px;
   position: relative;
-  width: 45%;
-  height: 190px;
+  width: 425px;
+  height: 220px;
   float: left;
 }
 
